# mepo

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .zenodo.json  CHANGELOG.md  CONTRIBUTING.md  README.md  cli.py  mepo  mepo.custom  mepo.spec  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.github/: CODEOWNERS
.github/workflows/: changelog-enforcer.yml  mepo.yaml  run-formatter.yaml  run-linter.yaml  run-tests.yaml
doc/: make_md_docs.py
docs/: make_md_docs.py
etc/: mepo-cd.bash  mepo-cd.csh  mepo-cd.zsh  mepo-completion.bash  mepo-path.py  mepo3-cd.bash  mepoconfig-example
mepo.d/: Mepo.py  main.py  mepo_state.py
mepo.d/branch/: branch.py
mepo.d/branch/brlist/: brlist.py
mepo.d/branch/create/: create.py
mepo.d/branch/delete/: delete.py
mepo.d/branch/switch/: switch.py
mepo.d/checkout/: checkout.py
mepo.d/clone/: clone.py
mepo.d/cmdline/: branch_parser.py  config_parser.py  mepo_branch_parser.py  mepo_parser.py  parser.py  patch_parser.py  stash_parser.py  tag_parser.py
mepo.d/command/: command.py
mepo.d/command/branch/: branch.py
mepo.d/command/changed-files/: changed-files.py
mepo.d/command/checkout/: checkout.py
mepo.d/command/checkout-if-exists/: checkout-if-exists.py
mepo.d/command/clone/: clone.py
mepo.d/command/commit/: commit.py
mepo.d/command/common/: utilities.py
mepo.d/command/compare/: compare.py
mepo.d/command/config/: config.py
mepo.d/command/develop/: develop.py
mepo.d/command/diff/: diff.py
mepo.d/command/fetch/: fetch.py
mepo.d/command/fetch-all/: fetch-all.py
mepo.d/command/history/: history.py
mepo.d/command/init/: init.py
mepo.d/command/list/: list.py
mepo.d/command/patch/: patch.py
mepo.d/command/pull/: pull.py
mepo.d/command/pull-all/: pull-all.py
mepo.d/command/push/: push.py
mepo.d/command/push-all/: push-all.py
mepo.d/command/reset/: reset.py
mepo.d/command/revert/: revert.py
mepo.d/common/: utilities.py
mepo.d/config/: config_file.py
mepo.d/diff/: diff.py
mepo.d/init/: init.py
mepo.d/repository/: git.py  svn.py
mepo.d/state/: component.py  exceptions.py  history.py  state.py  utilities.py
mepo.d/status/: status.py
mepo.d/utest/: test_mepo_commands.py
mepo.d/utilities/: colors.py  mepoconfig.py  meporc.py  path.py  shellcmd.py  verify.py  version.py
mepo/cmdline/: parser.py
mepo/repository/: git.py
mepo/state/: component.py  state.py
mepo/utest/: test_mepo_commands.py
mepo/utilities/: mepoconfig.py  shellcmd.py
src/mepo/: __init__.py  __main__.py  component.py  git.py  main.py  registry.py  state.py
src/mepo3/: __init__.py  __main__.py  component.py  git.py  registry.py  state.py  utilities
tests/: test_component.py  test_mepo3_commands.py  test_mepo_clone.py  test_mepo_commands.py  test_registry.py
tests/input/: args.py  external-components.yaml
tests/output/: compare_brief_output.txt  compare_full_output.txt  list_output.txt  output_branch_create.txt  output_branch_delete.txt  output_branch_list.txt  output_clone_status.txt  output_compare.txt  output_compare_all.txt  output_develop_status.txt  output_diff.txt  output_list.txt  output_pull_all.txt  output_push.txt  output_reset.txt  output_tag_create.txt  output_tag_delete.txt  output_whereis.txt  status_output.txt
(+201 files in other folders)
