[tool.poetry]
name = "mepo"
version = "2.0.0"
description = "A tool for managing (m)ultiple r(epo)s"
authors = ["GMAO SI Team <siteam@gmao.gsfc.nasa.gov>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/GEOS-ESM/mepo.git"

[tool.poetry.dependencies]
python = "^3.9"
PyYAML = "^6.0.1"
black = "^24.4.2"
mdutils = "^1.6.0"
pylint = "^3.1.0"
flake8 = "^7.0.0"

[tool.poetry.scripts]
mepo = "mepo.__main__:main"
mepo3 = "mepo3.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
