[project]
name = "mepo"
version = "2.0.0"
description = "A tool for managing (m)ultiple r(epo)s"
authors = [{name="GMAO SI Team", email="siteam@gmao.gsfc.nasa.gov"}]
dependencies = [
    "pyyaml>=6.0.1",
    "mdutils>=1.6.0",
]
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/GEOS-ESM/mepo.git"
requires-python = ">= 3.9"

[project.scripts]
mepo = "mepo.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=24.4.2",
    "pylint>=3.2.0",
    "flake8>=7.0.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = [
    "src/mepo",
    "src/mepo3",
]
