[metadata]
name = mepo
version = 1.37.0
license_file = LICENSE.md
long_description = file: README.md
author = Matt Thompson
author_email = matthew.thompson@nasa.gov
url = https://github.com/GEOS-ESM/mepo/

[options]
packages = find:
python_requires = >=3.6
install_requires =
    PyYAML >= 5.4

[options.entry_points]
console_scripts =
    mepo = mepo.main:main

