[metadata]
name = mepo
version = 1.37.0
license = NOSA
license_files = LICENSE.md
long_description = file: README.md
long_description_content_type = text/markdown
author = Matt Thompson
author_email = matthew.thompson@nasa.gov
url = https://github.com/GEOS-ESM/mepo/
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Development Status :: 4 - Beta

[options]
packages = find:
python_requires = >=3.6
install_requires =
    PyYAML >= 5.4

[options.entry_points]
console_scripts =
    mepo = mepo.__main__:main

